# oopsample

./: CMakeLists.txt  main.cpp
include/: ConsumableResource.h  Executable.h  Process.h  Resource.h  Task.h  UsableResource.h
src/: ConsumableResource.cpp  Executable.cpp  Process.cpp  Resource.cpp  Task.cpp  UsableResource.cpp
